clusters/apps/env/production/soho/affine/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: affine
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
    external-dns.alpha.kubernetes.io/hostname: notes.${SECRET_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${DYNAMIC_DOMAIN}
    external-dns/public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`notes.${SECRET_DOMAIN}`)"
      middlewares:
        - name: ak-outpost-authentik-embedded-outpost
          namespace: auth-system
        - name: l5d-affine-middleware
          namespace: soho
      priority: 10
      services:
        - name: affine
          port: 3000
    - kind: Rule
      match: "Host(`notes.${SECRET_DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: auth-system
          port: 9000
      middlewares:
        - name: l5d-authentik-middleware
          namespace: auth-system
  tls:
    secretName: crj-wildcard-certificate
    domains:
      - main: notes.${SECRET_DOMAIN}
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: l5d-affine-middleware
spec:
  headers:
    customRequestHeaders:
      l5d-dst-override: "affine.soho.svc.cluster.local:3000"
